Updated helper text to better sense non-gm use.

--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -2,7 +2,7 @@
     <div>This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets.</div>
     <div class="base-form__callout base-form__callout--information">
       <i class="fas fa-info-circle"></i>
-      {{#if (gt targetArray.length 0)}}
+      {{#if (and (gt targetArray.length 0) (eq gmCheck "gm"))}}
         There are {{targetArray.length}} target(s) selected.
       {{else}}
         There are {{selectedArray.length}} selected token(s).
