Updated to ensure best display on chrome browsers

--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -41,7 +41,7 @@
     <input class="base-form__hidden-input" type="hidden" name="img" value="{{ifThen storedData.effect_img storedData.effect_img "icons/svg/stoned.svg"}}">
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="bgColor">Background Color:</label>
+    <label class="base-form__label" for="bgColor">BG Color:</label>
     <input class="base-form__color-input" type="color" id="bgColor" name="bgColor" value="{{ifThen storedData.effect_bgColor storedData.effect_bgColor "#7B4874"}}">
   </div>
   <div class="base-form__group">
