--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1103,13 +1103,28 @@
 .popup-form {
   max-height: 90vh;
   overflow-y: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  -ms-overflow-style: initial;
+  scrollbar-width: thin;
+  scrollbar-color: var(--eventide-rp-system-input-focus) transparent;
   font-family: "Underdog", serif;
   margin: 0.5rem;
 }
 .popup-form::-webkit-scrollbar {
-  display: none;
+  width: 6px;
+  background-color: transparent;
+  display: block;
+}
+.popup-form::-webkit-scrollbar-thumb {
+  background-color: var(--eventide-rp-system-input-focus);
+  border-radius: 10px;
+  border: 1px solid var(--eventide-rp-system-input-bg);
+}
+.popup-form::-webkit-scrollbar-thumb:hover {
+  background-color: var(--eventide-rp-system-primary-button-hover);
+}
+.popup-form::-webkit-scrollbar-track {
+  background-color: transparent;
+  margin: 0;
 }
 .popup-form--disabled {
   pointer-events: none;
