--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -74,13 +74,31 @@
 .popup-form {
   max-height: 90vh; 
   overflow-y: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  -ms-overflow-style: initial;
+  scrollbar-width: thin;
+  scrollbar-color: var(--eventide-rp-system-input-focus) transparent;
   font-family: typography.$underdog;
   margin: 0.5rem;
 
   &::-webkit-scrollbar {
-    display: none;
+    width: 6px;
+    background-color: transparent;
+    display: block;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--eventide-rp-system-input-focus);
+    border-radius: 10px;
+    border: 1px solid var(--eventide-rp-system-input-bg);
+    
+    &:hover {
+      background-color: var(--eventide-rp-system-primary-button-hover);
+    }
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    margin: 0;
   }
 
   // Block modifiers
