Added in html handling for gear creator entries

--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -5,7 +5,7 @@
       {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.PlayerMode" count=selectedArray.length}}}
     {{else}}
       {{#if (eq targetArray.length 0)}}
-        {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.NoTargets"}}
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.NoTargets"}}}
       {{else}}
         {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.WithTargets" count=targetArray.length}}}
       {{/if}}
