--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -2,35 +2,35 @@
   <div class="base-form__callout base-form__callout--information">
     <i class="fas fa-info-circle"></i>
     {{#if (eq playerMode true)}}
-      You are using the effect creator in player mode. This can only be used to create features for tokens you control. You currently have <strong>{{selectedArray.length}} tokens(s)</strong> selected.
+      {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.PlayerMode" count=selectedArray.length}}}
     {{/if}}
     {{#if (eq playerMode false)}}
       {{#if (eq targetArray.length 0)}}
-        There are no targets selected. This will create either a status condition or feature (as selected) for the compendium only.
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.NoTargets"}}}
       {{else}}
-        There are <strong>{{targetArray.length}} target(s)</strong> selected. This will create a status condition or feature (as selected) for each target and your compendium.
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.WithTargets" count=targetArray.length}}}
       {{/if}}
     {{/if}}
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="type">Type:</label>
+    <label class="base-form__label" for="type">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Type"}}}:</label>
     <select class="base-form__select" id="type" name="type">
       {{#if (eq playerMode false)}}
-        <option value="status" {{#if (eq storedData.effect_type "status")}}selected{{/if}}>Status</option>
+        <option value="status" {{#if (eq storedData.effect_type "status")}}selected{{/if}}>{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Status"}}}</option>
       {{/if}}
-      <option value="feature" {{#if (eq storedData.effect_type "feature")}}selected{{/if}}>Feature</option>
+      <option value="feature" {{#if (eq storedData.effect_type "feature")}}selected{{/if}}>{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Feature"}}}</option>
     </select>
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="name">Name:</label>
-    <input class="base-form__text-input" autofocus type="text" id="name" name="name" placeholder="Name">
+    <label class="base-form__label" for="name">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}}:</label>
+    <input class="base-form__text-input" autofocus type="text" id="name" name="name" placeholder="{{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}}">
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="description">Description:</label>
-    <textarea class="base-form__textarea" id="description" name="description" placeholder="Description"></textarea>
+    <label class="base-form__label" for="description">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Description"}}}:</label>
+    <textarea class="base-form__textarea" id="description" name="description" placeholder="{{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}}"></textarea>
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="img">Image:</label>
+    <label class="base-form__label" for="img">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Image"}}}:</label>
     <img
       class="base-form__image base-form__image--edit"
       src="{{storedData.effect_img}}"
@@ -41,43 +41,43 @@
     <input class="base-form__hidden-input" type="hidden" name="img" value="{{ifThen storedData.effect_img storedData.effect_img "icons/svg/stoned.svg"}}">
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="bgColor">BG Color:</label>
+    <label class="base-form__label" for="bgColor">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Background"}}}:</label>
     <input class="base-form__color-input" type="color" id="bgColor" name="bgColor" value="{{ifThen storedData.effect_bgColor storedData.effect_bgColor "#7B4874"}}">
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="textColor">Text Color:</label>
+    <label class="base-form__label" for="textColor">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Text"}}}:</label>
     <input class="base-form__color-input" type="color" id="textColor" name="textColor" value="{{ifThen storedData.effect_textColor storedData.effect_textColor "#ffffff"}}">
   </div>
   <div class="base-form__group">
-    <label class="base-form__label" for="iconTint">Icon Tint:</label>
+    <label class="base-form__label" for="iconTint">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:</label>
     <input class="base-form__color-input" type="color" id="iconTint" name="iconTint" value="{{ifThen storedData.effect_iconTint storedData.effect_iconTint "#ffffff"}}">
   </div>
-  <div class="base-form__header">Effects</div>
+  <div class="base-form__header">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}}</div>
   {{#each abilities}}
     <div class="base-form__group">
-      <label class="base-form__label" for="{{lowercase this}}">{{this}}:</label>
+      <label class="base-form__label" for="{{lowercase this}}">{{{capitalize (localize (lookup @root.config.abilityAbbreviations this))}}}:</label>
       <input class="base-form__number-input" type="number" id="{{lowercase this}}" name="{{lowercase this}}" value="0">
       <select class="base-form__select" id="{{lowercase this}}-mode" name="{{lowercase this}}-mode">
-        <option value="add">Change</option>
-        <option value="override">Override</option>
-        <option value="advantage">Advantage</option>
-        <option value="disadvantage">Disadvantage</option>
+        <option value="add">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}}</option>
+        <option value="override">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}}</option>
+        <option value="advantage">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Advantage"}}}</option>
+        <option value="disadvantage">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Disadvantage"}}}</option>
       </select>
     </div>
   {{/each}}
   {{#if (eq playerMode false)}}
     {{#each hiddenAbilities}}
       <div class="base-form__group">
-        <label class="base-form__label" for="{{lowercase this}}">{{this}}:</label>
+        <label class="base-form__label" for="{{lowercase this}}">{{{capitalize (localize (lookup @root.config.hiddenAbilityAbbreviations this))}}}:</label>
         <input class="base-form__number-input" type="number" id="{{lowercase this}}" name="{{lowercase this}}" value="0">
         <select class="base-form__select" id="{{lowercase this}}-mode" name="{{lowercase this}}-mode">
-          <option value="add">Change</option>
-          <option value="override">Override</option>
+          <option value="add">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}}</option>
+          <option value="override">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}}</option>
         </select>
       </div>
     {{/each}}
   {{/if}}
   <div class="base-form__group base-form__group--right">
-    <button type="submit" class="base-form__button base-form__button--primary">{{ifThen targetArray.length "Create and Apply" "Create"}}</button>
+    <button type="submit" class="base-form__button base-form__button--primary">{{{ifThen targetArray.length (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.CreateAndApply") (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Create")}}}</button>
   </div>
 </div>
