--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -1,12 +1,12 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
     <!-- Warnings -->
     {{#if problems.targeting}}
-        <div class="popup-form__warning">You need to target someone to use this power!</div>
+        <div class="popup-form__warning">{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.TargetPower"}}</div>
     {{/if}}
     {{#if problems.power}}
-        <div class="popup-form__warning">You don't have enough power to use this! (Need {{item.system.cost}}, have {{item.actor.system.power.value}})</div>
+        <div class="popup-form__warning">{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.InsufficientPower" cost=item.system.cost actorPower=item.actor.system.power.value}}</div>
     {{/if}}
-    <div class="popup-form__header">Combat Power Details</div>
+    <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
     
     {{#if item.system.description}}
     <div class="popup-form__content popup-form__content--description">
@@ -17,27 +17,27 @@
 
     {{#if item.system.roll}}
     <div class="popup-form__section">
-        <div class="popup-form__header">Roll Information</div>
+        <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
         <div class="popup-form__group">
             <div class="popup-form__row">
-                <div class="popup-form__label">Type</div>
+                <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
                 <div class="popup-form__content">{{item.system.roll.type}}</div>
-                <div class="popup-form__label">Ability</div>
+                <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</div>
                 <div class="popup-form__content">{{item.system.roll.ability}}</div>
             </div>
         </div>
         <div class="popup-form__group">
             <div class="popup-form__row">
-                <div class="popup-form__label">Bonus</div>
+                <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Bonus"}}</div>
                 <div class="popup-form__content">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
-                <div class="popup-form__label">Adjustments</div>
+                <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adjustments"}}</div>
                 <div class="popup-form__content">
                     {{#if (eq item.system.roll.diceAdjustments.total 0)}}
-                        <span class="popup-form__text--neutral">Neutral</span>
+                        <span class="popup-form__text--neutral">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Neutral"}}</span>
                     {{else if (lt item.system.roll.diceAdjustments.total 0)}}
-                        <span class="popup-form__text--disadvantage">Disadv {{numberFormat (abs item.system.roll.diceAdjustments.total) decimals=0}}</span>
+                        <span class="popup-form__text--disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Disadv"}} {{numberFormat (abs item.system.roll.diceAdjustments.total) decimals=0}}</span>
                     {{else}}
-                        <span class="popup-form__text--advantage">Adv {{numberFormat item.system.roll.diceAdjustments.total decimals=0}}</span>
+                        <span class="popup-form__text--advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adv"}} {{numberFormat item.system.roll.diceAdjustments.total decimals=0}}</span>
                     {{/if}}
                 </div>
             </div>
@@ -47,22 +47,22 @@
 
     {{#if item.system.prerequisites}}
     <div class="popup-form__section">
-        <div class="popup-form__header">Prerequisites</div>
+        <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
         <div class="popup-form__content">{{item.system.prerequisites}}</div>
     </div>
     {{/if}}
 
     {{#if item.system.usageInfo}}
     <div class="popup-form__section popup-form__section--usage">
-        <div class="popup-form__header popup-form__header--usage">Usage Information</div>
+        <div class="popup-form__header popup-form__header--usage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UsageInfo"}}</div>
         <div class="popup-form__content popup-form__content--usage">{{item.system.usageInfo}}</div>
     </div>
     {{/if}}
 
     <div class="popup-form__group popup-form__group--right">
         {{#unless (or problems.targeting problems.power)}}
-            <button type="submit" class="popup-form__button popup-form__button--primary">Use Power</button>
+            <button type="submit" class="popup-form__button popup-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.UsePower"}}</button>
         {{/unless}}
-        <button type="button" class="popup-form__button" data-action="close">Close</button>
+        <button type="button" class="popup-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
     </div>
 </div>
