--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -4,26 +4,26 @@
   <img src="{{img}}" class="chat-card__image--primary" /> 
   <div>{{name}}</div>
   </div>
-  <div class="chat-card__header--subheader">(Cost: {{system.cost}})</div>
+  <div class="chat-card__header--subheader">({{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Cost"}}: {{system.cost}})</div>
 </div>
 </div>
 
 {{#if hasRoll}}
   {{#if critHit}}
-    <div class="chat-card__header chat-card__header--critical-hit">Critical Hit!</div>
+    <div class="chat-card__header chat-card__header--critical-hit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticalHit"}}</div>
   {{/if}}
   {{#if critMiss}}
-    <div class="chat-card__header chat-card__header--critical-miss">Critical Miss!</div>
+    <div class="chat-card__header chat-card__header--critical-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticaMiss"}}</div>
   {{/if}}
   {{#if stolenCrit}}
-    <div class="chat-card__header chat-card__header--stolen-crit">Stolen Critical!</div>
+    <div class="chat-card__header chat-card__header--stolen-crit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.StolenCrit"}}</div>
   {{/if}}
   {{#if savedMiss}}
-    <div class="chat-card__header chat-card__header--saved-miss">Saved Miss!</div>
+    <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
   {{/if}}
   {{#if acCheck}}
     <div class="chat-card__effects chat-card__effects--ac-check">
-      <div class="chat-card__effects--title">AC Check</div>
+      <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
       {{#each targetRollData as |target|}}
           <div class="chat-card__effects--name flexrow"> {{this.name}}:
             {{#each this.abilities as |ability key|}}
