--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -3,16 +3,16 @@
     <i class="{{pickedIcon}}"></i> {{label}}
   </div>
   {{#if critHit}}
-    <div class="chat-card__header chat-card__header--critical-hit">Critical Hit!</div>
+    <div class="chat-card__header chat-card__header--critical-hit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticalHit"}}</div>
   {{/if}}
   {{#if critMiss}}
-    <div class="chat-card__header chat-card__header--critical-miss">Critical Miss!</div>
+    <div class="chat-card__header chat-card__header--critical-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticaMiss"}}</div>
   {{/if}}
   {{#if stolenCrit}}
-    <div class="chat-card__header chat-card__header--stolen-crit">Stolen Critical!</div>
+    <div class="chat-card__header chat-card__header--stolen-crit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.StolenCrit"}}</div>
   {{/if}}
   {{#if savedMiss}}
-    <div class="chat-card__header chat-card__header--saved-miss">Saved Miss!</div>
+    <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
   {{/if}}
   {{#if acCheck}}
     <div class="chat-card__effects chat-card__effects--ac-check">
