--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -1,32 +1,32 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-    <div>This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets.</div>
+    <div>{{{localize "EVENTIDE_RP_SYSTEM.Forms.ScriptExplanations.DamageTargets"}}}</div>
     <div class="base-form__callout base-form__callout--information">
       <i class="fas fa-info-circle"></i>
       {{#if (and (gt targetArray.length 0) (eq gmCheck "gm"))}}
-        There are {{targetArray.length}} target(s) selected.
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Damage.TargetMode" count=targetArray.length}}}
       {{else}}
-        There are {{selectedArray.length}} selected token(s).
+        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Damage.SelectMode" count=selectedArray.length}}}
       {{/if}}
     </div>
     <div class="base-form__group">
-      <label class="base-form__label" for="label">Label:</label>
-      <input class="base-form__text-input" autofocus placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
+      <label class="base-form__label" for="label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Label"}}:</label>
+      <input class="base-form__text-input" autofocus placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Label"}}" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
     </div>
     <div class="base-form__group">
-      <label class="base-form__label" for="description">Description:</label>
-      <input class="base-form__text-input" placeholder="Description" name="description" value="{{lookup storedData (lookup storageKeys 1)}}">
+      <label class="base-form__label" for="description">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Description"}}:</label>
+      <input class="base-form__text-input" placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}" name="description" value="{{lookup storedData (lookup storageKeys 1)}}">
     </div>
     <div class="base-form__group">
-      <label class="base-form__label" for="formula">Formula:</label>
-      <input class="base-form__text-input" placeholder="xdy + z" name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
+      <label class="base-form__label" for="formula">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Formula"}}:</label>
+      <input class="base-form__text-input" placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Formula"}}" name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
     </div>
     <div class="base-form__group base-form__group--checkbox">
-      <label class="base-form__label" for="isHeal">Is Heal:</label>
+      <label class="base-form__label" for="isHeal">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IsHeal"}}:</label>
       <input class="base-form__checkbox" type="checkbox" name="isHeal" {{checked heal}}>
     </div>
     <div class="base-form__group base-form__group--right">
-      <button type="submit" class="base-form__button base-form__button--primary">Damage</button>
-      <button type="button" class="base-form__button" data-action="store">Store</button>
-      <button type="button" class="base-form__button" data-action="close">Close</button>
+      <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Damage"}}</button>
+      <button type="button" class="base-form__button" data-action="store">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Store"}}</button>
+      <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
     </div>
 </div>
