--- a/templates/macros/restore-target.hbs
+++ b/templates/macros/restore-target.hbs
@@ -1,22 +1,22 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
   <div class="base-form__callout base-form__callout--information">
     <i class="fas fa-info-circle"></i>
-    Restore {{actor.name}}'s Resolve, power, and selected statuses.
+    {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.RestoreTarget" target=actor.name}}
   </div>
   <div class="base-form__group base-form__group--checkbox">
-    <label class="base-form__label" for="restoreResolve">Restore Resolve:</label>
+    <label class="base-form__label" for="restoreResolve">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RestoreResolve"}}</label>
     <input class="base-form__checkbox" autofocus type="checkbox" id="restoreResolve" name="restoreResolve" {{checked defaultOptions.restoreResolve}}>
   </div>
   <div class="base-form__group base-form__group--checkbox">
-    <label class="base-form__label" for="restorePower">Restore Power:</label>
+    <label class="base-form__label" for="restorePower">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RestorePower"}}</label>
     <input class="base-form__checkbox" type="checkbox" id="restorePower" name="restorePower" {{checked defaultOptions.restorePower}}>
   </div>
   <hr />
   <div class="base-form__group base-form__group--checkbox base-form__group--header">
-    <label class="base-form__label">Remove Statuses:</label>
+    <label class="base-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RemoveStatuses"}}</label>
   </div>
   <div class="base-form__group base-form__group--checkbox">
-    <label class="base-form__label" for="all">All</label>
+    <label class="base-form__label" for="all">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.All"}}</label>
     <input class="base-form__checkbox" type="checkbox" id="all" name="all">
   </div>
   {{#each statusEffects as |status|}}
@@ -26,7 +26,7 @@
     </div>
   {{/each}}
   <div class="base-form__group base-form__group--right">
-    <button type="submit" class="base-form__button base-form__button--primary">Restore</button>
-    <button type="button" class="base-form__button" data-action="close">Close</button>
+    <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Restore"}}</button>
+    <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
   </div>
 </div>
