--- a/templates/macros/select-ability-roll.hbs
+++ b/templates/macros/select-ability-roll.hbs
@@ -1,5 +1,5 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-    <div class="base-form__header">Select an Ability Roll</div>
+    <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.SelectAbilityRoll"}}:</div>
     <div class="base-form__group">
         <select class="base-form__select" autofocus name="attribute-choice">
             {{#each abilities}}
@@ -8,7 +8,7 @@
         </select>
     </div>
     <div class="base-form__group base-form__group--right">
-      <button type="submit" class="base-form__button base-form__button--primary">Roll</button>
-      <button type="button" class="base-form__button" data-action="close">Cancel</button>
+      <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Roll"}}</button>
+      <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
     </div>
 </div>
