Updated item header to use new translation strings

--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -71,7 +71,7 @@
       <div class='resource flex-group-center'>
         {{#if (eq actor.type 'character')}}
           <label class='resource-label'>
-            {{localize 'EVENTIDE_RP_SYSTEM.Actor.Character.FIELDS.attributes.level.value.label'}}
+            {{localize 'EVENTIDE_RP_SYSTEM.Actor.Character.attributes.level.value.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
             <input
